# PonziLand_Mod

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  GAMEJAM.md  LICENSE  devenv.nix  devenv.yaml  docker-compose.test.yml  readme.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  deployment-template.md
.github/workflows/: _deploy-cloudflare.yaml  _deploy-docker.yaml  _formatting-client.yaml  _formatting-contracts.yaml  _formatting-rust.yaml  _test-client.yaml  _test-contracts.yaml  _test-rust.yaml  ci.yaml
.sqlx/: query-11fea31b1f0dc628a0988a56bebd2b9dfbc543be87c7c48143d248c39c46cd60.json  query-18aa056526db319f9b61ceae93690c29b1d92324931df4a53ba1dd9f69186e78.json  query-1c2a3fac422faca120a461a3797a96383c9e17d272df94aacd9dcf5321d214cf.json  query-276ba298176735e772fd8740fd7c160c487ad5c8a2c24a1e59407383edd13f71.json  query-2cd077c47ff5feeda10ab3971b62deda52c17dd7172cffcdb20c9bc32885dfc3.json  query-372d4e3274237d64ac2a48b9447d4c0c6a3bb9816d5e001799e2fe4efe86b724.json  query-529a48e0d6a093f96c563bc021948800e50ac21ed15f30f1e6d75b0b09c104d6.json  query-5a06e6ef771936c6321bde959cfe8fb405092c4e4a81c3ed8b43ec6ea1aeff60.json  query-761c17289165b5c5c7003f2d87c82c05f928ddb77aae5727a4ed32d73481bd65.json  query-8d429527c98e7bf1ba58790278c1e2a0bca980f09c414c6d9af9d71fbcef262e.json  query-94991bdaf67e929555a2e402b181d5aeab01e2892bba7250991699751c0253ae.json  query-a26e6f9ad393aa27856f2ca77857b7fc6d7e15355b19203359bcbc4b6afe33c4.json  query-d4490fbeceb580fa2bfc765d809f4e5b18dcdc3e61bbaa1cd00b1d80034a41ac.json  query-f0cff68cac9d2b39b97791577132a8209d60b923d3219ebc5115eaec7dee0b0f.json
.zed/: settings.json
client/: .gitignore  .prettierrc  bun.lockb  components.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts  wrangler.jsonc
client/data/: mainnet.json  sepolia.json
client/patches/: starknet@6.23.1.patch
client/scripts/: generateSign.ts
client/src/: app.css  app.d.ts  app.html  hooks.server.test.ts  hooks.server.ts
client/src/lib/: account.svelte.ts  const.ts  contracts.gen.ts  dojoConfig.ts  flags.ts  interfaces.ts  models.gen.ts  utils.ts  zustandToSvelte.ts
client/src/routes/: +layout.svelte  +page.svelte
contracts/: .gitignore  .tool-versions  DEVELOPMENT.md  Scarb.toml  dojo_dev.toml  dojo_mainnet-test.toml  dojo_release.toml  dojo_sepolia.toml  manifest_dev.json  manifest_mainnet-test.json  manifest_mainnet.json  manifest_sepolia.json  torii-mainnet-test.toml  torii-mainnet.toml  torii-sepolia.toml
contracts/bindings/typescript/: contracts.gen.ts  models.gen.ts
contracts/scripts/: deploy-mainnet-test.sh  deploy-mainnet.sh  deploy-sepolia.sh  land_convert
contracts/src/: consts.cairo  lib.cairo  store.cairo
contracts/src/components/: payable.cairo  stake.cairo  taxes.cairo
contracts/src/helpers/: circle_expansion.cairo  coord.cairo  taxes.cairo
contracts/src/interfaces/: systems.cairo
contracts/src/mocks/: ekubo_core.cairo  erc20.cairo
contracts/src/models/: auction.cairo  land.cairo
contracts/src/systems/: actions.cairo  auth.cairo  (+1 more)
crates/chaindata/: README.md
crates/chaindata/models/: Cargo.toml  README.md
crates/chaindata/models/src/: error.rs  lib.rs
crates/chaindata/models/src/events/: event.rs  event_types.rs  id.rs  mod.rs
crates/chaindata/models/src/events/actions/: auction_finished.rs  land_bought.rs  land_nuked.rs  mod.rs  new_auction.rs
crates/chaindata/models/src/events/auth/: address_authorized.rs  address_removed.rs  mod.rs  verifier_updated.rs
crates/chaindata/models/src/models/: land.rs  land_stake.rs  mod.rs
crates/chaindata/models/src/shared/: location.rs  mod.rs  u256.rs
crates/chaindata/models/src/utils/: date.rs  id.rs  mod.rs
crates/chaindata/repository/: Cargo.toml
crates/chaindata/repository/src/: error.rs  event.rs  land.rs  land_stake.rs  lib.rs
crates/chaindata/repository/src/events/: base.rs  event_data.rs  mod.rs
crates/chaindata/service/: Cargo.toml  README.md
crates/chaindata/service/src/: error.rs  gg_xyz_api.rs  lib.rs
crates/chaindata/service/src/tasks/: event_listener.rs  mod.rs  model_listener.rs
crates/ekubo/: Cargo.toml
crates/ekubo/examples/: get_price.rs
crates/ekubo/src/: lib.rs  price.rs
crates/ekubo/src/api/: mod.rs  pool.rs
crates/ekubo/src/contract/: mod.rs  pool_price.rs
crates/ekubo/src/math/: mod.rs  u256fd128.rs
crates/indexer/: Cargo.toml  build.rs  config.toml
crates/indexer/src/: config.rs  main.rs  state.rs
crates/indexer/src/monitoring/: apalis.rs  axum.rs  mod.rs
crates/indexer/src/routes/: mod.rs
crates/indexer/src/routes/lands/: mod.rs
crates/indexer/src/routes/price/: mod.rs
crates/indexer/src/routes/tokens/: mod.rs
crates/indexer/src/service/: ekubo.rs  mod.rs  token.rs
crates/indexer/src/worker/: mod.rs
crates/migrations/: Cargo.toml  build.rs  lib.rs  main.rs
crates/migrations/sql/: 0001_initial.sql  0002_add-land-and-land-stake.sql
crates/ponziland-models/: Cargo.toml  README.md
crates/ponziland-models/src/: lib.rs
crates/ponziland-models/src/events/: event.rs  mod.rs
crates/ponziland-models/src/events/actions/: auction_finished.rs  land_bought.rs  land_nuked.rs  mod.rs  new_auction.rs
crates/ponziland-models/src/events/auth/: address_authorized.rs  address_removed.rs  mod.rs  verifier_updated.rs
crates/ponziland-models/src/models/: auction.rs  land.rs  land_stake.rs  mod.rs  model.rs
crates/ponziland-models/src/shared/: location.rs
crates/torii-ingester/: Cargo.toml  TODO.md
crates/torii-ingester/examples/: test.rs
crates/torii-ingester/src/: conversions.rs  error.rs  lib.rs  macros.rs  prelude.rs  torii_client.rs  torii_sql.rs  u256.rs
playtest/: README.md  Scarb.toml  bun.lockb  deploy.sh  package-lock.json  package.json  query-results.json  reset.ts  results.ts  script.ts  setup.ts  tokens.mainnet-test.json  tokens.mainnet-test.old.json  tokens.mainnet.json  tokens.sepolia.json
playtest/scripts/: abi.ts  account.ts  env.ts  utils.ts
playtest/src/: granter.cairo  lib.cairo
scraps/: CODE_STYLE.md  EVENT_STREAM.md  LEADERBOARD.md
(+238 files in other folders)
