[package]
name = "torii-ingester"
version = "0.1.0"
edition = "2021"

[[example]]
name = "test"

[dependencies]
tracing.workspace = true
starknet = { workspace = true }
tokio.workspace = true
tokio-stream = "0.1"

reqwest = { workspace = true, features = ["json"] }
thiserror.workspace = true

serde = { workspace = true, features = ["derive"] }

torii-client = { git = "https://github.com/dojoengine/torii.git", tag = "v1.5.5" }
torii-grpc-client = { git = "https://github.com/dojoengine/torii.git", tag = "v1.5.5" }
dojo-world = { git = "https://github.com/dojoengine/dojo", rev = "4145801" }
dojo-types = { git = "https://github.com/dojoengine/dojo", rev = "4145801" }
serde_json.workspace = true
tracing-subscriber.workspace = true
crypto-bigint = "0.5.5"
async-stream = "0.3.6"
chrono = { version = "0.4.41", features = ["serde"] }
serde-aux = "4.7.0"

[lints]
workspace = true
